# cpd-rs

./: .gitignore  Cargo.toml  README.md
scripts/: screenshot.ps1  screenshot.sh
src/: bvh.rs  decomp.rs  dsu.rs  io_obj.rs  main.rs  mesh.rs  metrics.rs  prim.rs  viewer.rs
