[package]
name = "cpd-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of Convex Primitive Decomposition for Collision Detection (Knodt & Gao, EG 2026), with research extensions"
repository = "https://github.com/wackoisgod/cpd-rs"

[[bin]]
name = "cpd"
path = "src/main.rs"

[dependencies]
nalgebra = "0.33"
gltf = { version = "1.4", default-features = false, features = ["import", "utils"] }
anyhow = "1"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
